<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/blue"
    tools:context=".Challenge">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_it"
        android:textSize="25dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/tvNomeSfida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@string/nome_sfida"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/tvPassiSfida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passi_totali_sfida"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/tvTimeSfida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:text="@string/time_totale_sfida"
                    android:textSize="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_passi"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvNumPassi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer"
                    />

                <TextView
                    android:id="@+id/countDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:00"
                    android:textSize="20dp"
                    />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/borderlessButtonStyle"
                    android:layout_marginTop="8dp"
                    android:textSize="15dp"
                    android:text="@string/start"
                    />

                <Button
                    android:id="@+id/bttTermina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/borderlessButtonStyle"
                    android:layout_marginTop="8dp"
                    android:text="@string/termina"
                    android:textSize="15dp"
                    />


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>









</LinearLayout>