<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/blue"
    tools:context=".CustomChallenge">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_it"
        android:textSize="25dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvInserisciSfida"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@string/inserisci_sfida"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/numero_passi"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="160dp"
                    android:id="@+id/etCustomPassi"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/secondi_sfida"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="160dp"
                    android:id="@+id/etCustomTempo"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />



            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/bttConferma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/borderlessButtonStyle"
                    android:layout_marginTop="8dp"
                    android:text="@string/conferma"
                    android:textSize="15dp"
                    />
                >

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>






</LinearLayout>